<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.order18.MainActivity" >

    <TextView
        android:id="@+id/lblloginTitle"
        android:labelFor="@+id/txtUserId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="LogIn"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/textView1"
        android:labelFor="@+id/txtUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/user_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/textView2"
        android:labelFor="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/txtUserId"        
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="100dp"
        android:inputType="text"
        android:layout_width="200dp"
        />
    <EditText
        android:id="@+id/txtPassword"        
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="150dp"
        android:inputType="textPassword"
        android:layout_width="200dp"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:background="@color/blue700"
        android:textColor="@color/white"
        android:text="@string/loginbutton"        
         />
    <Button
        android:id="@+id/btnforgotpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:background="@color/gray600"
        android:text="@string/forgotpassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />
    <Button
        android:id="@+id/btnNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="345dp"
        android:background="@color/red500"
        android:text="@string/newuserbutton"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />
</RelativeLayout>
